tests/errors/statistics_quantiles_short.ki
var stats = import("statistics")
discard stats.quantiles([1])
